# Assembly_Line_Simulation

./: .gitignore  CMakeLists.txt  README.md
MS1/: MS1.sln
MS1/MS1/: MS1.vcxproj  MS1.vcxproj.filters  Station.cpp  Station.h  Utilities.cpp  Utilities.h  ms1.cpp
MS2/: MS2.sln
MS2/MS2/: CustomerOrder.cpp  CustomerOrder.h  MS2.vcxproj  MS2.vcxproj.filters  Station.cpp  Station.h  Utilities.cpp  Utilities.h  ms2.cpp
MS3/: MS3.sln
MS3/MS3/: CustomerOrder.cpp  CustomerOrder.h  LineManager.cpp  LineManager.h  MS3.vcxproj  MS3.vcxproj.filters  Reflection.docx  Station.cpp  Station.h  Utilities.cpp  Utilities.h  Workstation.cpp  Workstation.h  ms3.cpp  reflect.txt
